<resources>
    <string name="app_name">Vehicle Management System</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="login">LOGIN</string>
    <string name="Email_id">Input your Email</string>
    <string name="driver_ID">Enter Driver ID</string>
    <string name="password">Password</string>
    <string name="registration">REGISTER</string>
    <string name="register">Register New Account</string>
    <string name="forgot_password">Forgot Password\?</string>
    <string name="Fname">Input your first Name</string>
    <string name="Lname">Input your Last Name</string>
    <string name="Phone_No">Phone Number</string>
    <string name="Password">Confirm Password</string>
    <string name="or">OR</string>
    <string name="Google">Google</string>
    <string name="Karibu">KARIBU\!\! Drive Bila Stress \:\)</string>
    <string name="photo">Photo</string>
    <string name="images">image</string>
    <string name="VehicleManagementSystem">Vehicle Management System</string>
    <string name="Register">REGISTER</string>
    <string name="loginnow">Already Have an Account</string>
    <string name="Reset_password">Reset Password</string>
    <string name="PasswordReset">Password Reset</string>
    <string name="Send">SEND</string>
    <string name="dashboard">Dashboard</string>
    <string name="maintenance">Maintenance</string>
    <string name="Fuel">Fuel</string>
    <string name="LogOut">Logout</string>
    <string name="Location">Location</string>
    <string name="Maintenance">Maintenance</string>
    <string name="number_plate">Input Vehicle Number Plate</string>
    <string name="submit">SUBMIT</string>
    <string name="next_maintenance">Input next maintenance</string>
    <string name="last_maintenance">Input last maintenance</string>
    <string name="amount">Total amount</string>
    <string name="description">Description</string>
    <string name="date">Input date</string>
    <string name="Fueltype">Input Fuel Type</string>
    <string name="ReceiptNumber">Receipt Number</string>
    <string name="default_info_title">default_info_title</string>
    <string name="default_info_snippet">default_info_snippet</string>
    <string name="pick_place">pick_place</string>
    <string name="Registernew">REGISTER NEW ACCOUNT</string>
    <string name="option_get_place">option_get_place</string>


</resources>