<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_material_design"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".Maintenance">
    <TextView
        android:id="@+id/maintenance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="68dp"
        android:text="@string/Maintenance"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_margin="25dp"
        android:textAlignment="center"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.456"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/number_plate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="76dp"
        android:background="@drawable/edit_text_bg"
        android:ems="15"
        android:layout_margin="25dp"
        android:hint="@string/number_plate"
        android:inputType="textPersonName"
        android:padding="15dp"
        app:layout_constraintBottom_toTopOf="@+id/nextMaintenance"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/maintenance"
        android:autofillHints="" />

    <EditText
        android:id="@+id/nextMaintenance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="76dp"
        android:background="@drawable/edit_text_bg"
        android:drawableStart="@drawable/ic_calender2"
        android:ems="15"
        android:layout_margin="25dp"
        android:hint="@string/next_maintenance"
        android:inputType="textPersonName"
        android:padding="15dp"
        app:layout_constraintBottom_toTopOf="@+id/lastMaintenance"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/number_plate"
        android:autofillHints="" />

    <EditText
        android:id="@+id/lastMaintenance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:ems="15"
        android:layout_margin="25dp"
        android:drawableStart="@drawable/ic_calendar"
        android:inputType="textPersonName"
        android:background="@drawable/edit_text_bg"
        android:hint="@string/last_maintenance"
        android:padding="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nextMaintenance"
        app:layout_constraintBottom_toTopOf="@id/amount"
        android:autofillHints="" />


    <EditText
        android:id="@+id/amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:ems="15"
        android:layout_margin="25dp"
        android:inputType="textPersonName"
        android:background="@drawable/edit_text_bg"
        android:hint="@string/amount"
        android:padding="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lastMaintenance"
        app:layout_constraintBottom_toTopOf="@id/description"
        android:autofillHints="" />
    <EditText
        android:id="@+id/description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:ems="15"
        android:layout_margin="25dp"
        android:inputType="textPersonName"
        android:background="@drawable/edit_text_bg"
        android:hint="@string/description"
        android:padding="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/amount"
        app:layout_constraintBottom_toTopOf="@id/submitbtn"
        android:autofillHints="" />

    <Button
        android:id="@+id/submitbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:background="@drawable/button_bg"
        android:padding="15dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/amount"
        app:layout_constraintVertical_bias="0.577" />

</LinearLayout>